--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ python:
     - "3.6"
 install:
   - pip install -r Requirements.txt
+  - pip install coveralls
 # command to run tests
 script:
-  -nosetests --with-coverage --cover-package=app && coverage html
-
+   - nosetests tests.tests --with-coverage
+  - coverage report
 after_success: 
 - coveralls
