--- a/Requirements.txt
+++ b/Requirements.txt
@@ -11,6 +11,7 @@ Flask-Cors==3.0.6
 Flask-GoogleMaps==0.2.6
 funcsigs==1.0.2
 gunicorn==19.9.0
+gyp==0.1
 idna==2.6
 ipaddress==1.0.17
 itsdangerous==1.1.0
@@ -35,11 +36,13 @@ pycodestyle==2.4.0
 pycparser==2.19
 pycrypto==2.6.1
 pyflakes==1.6.0
+pygobject==3.26.1
 PyJWT==1.6.4
 pylint==1.9.3
 pyOpenSSL==17.5.0
 python-dotenv==0.8.2
 pyxdg==0.25
+PyYAML==3.13
 requests==2.18.4
 scandir==1.9.0
 SecretStorage==2.3.1
