--- a/Requirements.txt
+++ b/Requirements.txt
@@ -6,11 +6,13 @@ chardet==3.0.4
 click==6.7
 colorama==0.3.9
 cryptography==1.7.2
+flasgger==0.8.1
 Flask==1.0.2
 Flask-Cors==3.0.6
 Flask-GoogleMaps==0.2.6
 funcsigs==1.0.2
 gunicorn==19.9.0
+heroku==0.1.4
 idna==2.6
 ipaddress==1.0.17
 itsdangerous==1.1.0
