--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,52 +1,20 @@
 asn1crypto==0.24.0
-autopep8==1.4.3
-certifi==2018.1.18
+atomicwrites==1.2.1
+attrs==18.2.0
 cffi==1.11.5
-chardet==3.0.4
-click==6.7
-colorama==0.3.9
-cryptography==1.7.2
-flasgger==0.8.1
+Click==7.0
+cryptography==2.4.2
 Flask==1.0.2
-Flask-Cors==3.0.6
-Flask-GoogleMaps==0.2.6
-funcsigs==1.0.2
 gunicorn==19.9.0
-heroku==0.1.4
-idna==2.6
-ipaddress==1.0.17
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
-jwt==0.5.2
-keyring==10.6.0
-keyrings.alt==3.0
+jwt==0.5.4
 MarkupSafe==1.1.0
-mock==2.0.0
-module==0.2.1
-nose==1.3.7
-nose2==0.7.4
-parse==1.8.4
-passlib==1.7.1
-pathlib2==2.3.3
-pbr==4.3.0
-pep8==1.7.1
-psycopg2==2.7.5
-psycopg2-binary==2.7.5
-pyasn1==0.4.5
-pycodestyle==2.4.0
+more-itertools==5.0.0
+pluggy==0.8.1
+py==1.7.0
 pycparser==2.19
-pycrypto==2.6.1
-pyflakes==1.6.0
-PyJWT==1.6.4
-pylint==1.9.3
-pyOpenSSL==17.5.0
-python-dotenv==0.8.2
-pyxdg==0.25
-PyYAML==3.13
-requests==2.18.4
-scandir==1.9.0
-SecretStorage==2.3.1
-typing==3.5.3.0
-urllib3==1.22
-virtualenv==16.0.0
+pytest==4.1.1
+six==1.12.0
 Werkzeug==0.14.1
