--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - pip install -r Requirements.txt
 
 script:
-  -  coverage run -m pytest
+  -  python -m pytest
   -  coverage report
   
 after_success: 
