--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ install:
   - pip install -r Requirements.txt
 
 script:
-  -  python -m pytest
-  -  coverage report
+  -  python -m pytest --cov
   
 after_success: 
 - coveralls
