--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - pip install -r Requirements.txt
 
 script:
-  -  python -m pytest --cov
+  -  coverage run pytest
   
 after_success: 
 - coveralls
