--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,57 +1,35 @@
-asn1crypto==0.24.0
-autopep8==1.4.3
-certifi==2018.1.18
+astroid==2.1.0
 atomicwrites==1.2.1
 attrs==18.2.0
-cffi==1.11.5
+certifi==2018.10.15
 chardet==3.0.4
-colorama==0.3.9
-flasgger==0.8.1
 Click==7.0
-cryptography==2.4.2
+colorama==0.4.0
+coverage==4.5.2
+coveralls==1.5.1
+docopt==0.6.2
 Flask==1.0.2
-Flask-Cors==3.0.6
-Flask-GoogleMaps==0.2.6
-funcsigs==1.0.2
 gunicorn==19.9.0
-heroku==0.1.4
-ipaddress==1.0.17
-idna==2.8
+idna==2.5
+isort==4.3.4
 itsdangerous==1.1.0
 Jinja2==2.10
-keyring==10.6.0
-keyrings.alt==3.0
-jwt==0.5.4
+lazy-object-proxy==1.3.1
 MarkupSafe==1.1.0
-mock==2.0.0
-module==0.2.1
-nose==1.3.7
-nose2==0.7.4
-parse==1.8.4
-passlib==1.7.1
-pathlib2==2.3.3
-pbr==4.3.0
-pep8==1.7.1
-pyasn1==0.4.5
-pycodestyle==2.4.0
-more-itertools==5.0.0
-pluggy==0.8.1
+mccabe==0.6.1
+more-itertools==4.3.0
+newsapi==0.1.1
+newsapi-python==0.2.3
+pipenv==2018.11.26
+pluggy==0.8.0
 py==1.7.0
-pycparser==2.19
-pycrypto==2.6.1
-pyflakes==1.6.0
-PyJWT==1.6.4
-pylint==1.9.3
-pyOpenSSL==17.5.0
-python-dotenv==0.8.2
-pyxdg==0.25
-PyYAML==3.13
-requests==2.18.4
-scandir==1.9.0
-SecretStorage==2.3.1
-typing==3.5.3.0
-urllib3==1.22
-virtualenv==16.0.0
-pytest==4.1.1
-six==1.12.0
+pylint==2.2.2
+pytest==4.0.1
+pytest-cov==2.6.1
+requests==2.17.1
+six==1.11.0
+urllib3==1.21.1
+virtualenv==16.1.0
+virtualenv-clone==0.4.0
 Werkzeug==0.14.1
+wrapt==1.10.11
