--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ install:
   - pip install coverage
 
 script:
-  -  python -m pytest --cov
+  - coverage run -m pytest
+  - coverage report
   
 after_success: 
 - coveralls
